syntax = "proto3";

package com.amazonaws.services.schemaregistry.tests.protobuf.syntax3.basic;

message Another {

}

message ConflictingName {
  string name = 3;
}